# RepubliTax

./: .gitignore  README.md  app.spec  docker-compose.yml  dockerfile  hook-streamlit.py  launcher.py  pyproject.toml  requirements.txt  run_docker.sh
app/: Home.py  style.css
docs/source/: conf.py  notify.rst  types.rst  utils_files.rst
src/: notify.py  reader.py  utils_files.py  utils_pdf.py  writer.py  writer_types.py
test/: test_reader.py  test_writer.py
