[project]
name = "traderepublic-mto-bot"
version = "0.1.0"
description = ""
authors = [{ name = "mkarkour", email = "karmehdi@hotmail.com" }]
dependencies = [
    "pandas>=2.2.3",
    "numpy>=2.2.2",
    "matplotlib>=3.10.0",
    "pymupdf>=1.25.2",
    "pyyaml>=6.0.2",
    "regex>=2024.11.6",
    "streamlit>=1.42.0",
    "knockknock>=0.1.8.1",
    "streamlit-pdf-viewer>=0.0.22",
    "pyinstaller>=6.12.0",
    "ruff>=0.14.10",
    "sphinx>=8.2.3",
    "sphinx-rtd-theme>=3.0.2",
    "myst-parser>=4.0.1",
    "sphinx-autodoc-typehints>=3.5.2",
    "sphinxawesome-theme>=5.3.2",
    "sphinx-nameko-theme>=0.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["traderepublic_mto_bot"]
